test/syc/good/bxor_assign.c
/*
 * Bitwise XOR assign
 */

int a, b;

int bxor_assign(void)
{
	a ^= b;
}
